# GameTradingAPI

./: GameTrade.db  README.md  app.py  gametradeapi.yaml  meetings.md  populate.py  pyproject.toml  requirements.txt
GameTrading/: app.py  client.py  db.py  populate.py  trade_service.py
WIP/: app.py  db.py
app/: GameTrade.db  app.py  db.py  populate.py
tests/: test_app.py  test_db.py  test_populate.py  test_trade_service.py
wiki/: _sidebar.md
